@@ -272,7 +272,7 @@ public class HyperSearchResults extends JPanel implements EBComponent
 			if(buffer == null)
 				return;
 
-			view.setBuffer(buffer);
+			view.goToBuffer(buffer);
 
 			// fuck me dead
 			SwingUtilities.invokeLater(new Runnable()
@@ -298,8 +298,8 @@ public class HyperSearchResults extends JPanel implements EBComponent
 					int start = result.startPos.getOffset();
 					int end = result.endPos.getOffset();
 					Selection s = new Selection.Range(start,end);
-					view.setBuffer(buffer);
-					JEditTextArea textArea = view.getTextArea();
+					EditPane pane = view.goToBuffer(buffer);
+					JEditTextArea textArea = pane.getTextArea();
 					if(textArea.isMultipleSelectionEnabled())
 						textArea.addToSelection(s);
 					else
